# unitreeG1_virtual_noetic

./: .gitignore  README.md
robots/g1_description/config/: robot_control.yaml
robots/g1_description/launch/: gazebo.launch
robots/g1_description/xacro/: gazebo.xacro  gazebo_no_lidar.xacro  robot.xacro  robot_no_lidar.xacro
unitree_controller/: CMakeLists.txt  package.xml
unitree_gazebo/launch/: empty_world.launch  no_lidar_empty_world.launch  normal.launch  office_world.launch
unitree_gazebo/scripts/: g1_cmd_vel.py
unitree_gazebo/worlds/: bookstore.world  bookstore_lite.world  simple_office_with_people.world
