<?xml version="1.0"?>
<package format="2">
    <name>unitree_controller</name>
    <version>0.0.0</version>
    <description>The unitree_controller package.</description>

    <maintainer email="laikago@unitree.cc">unitree</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    
    <!-- Basic dependencies -->
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>tf</depend>
    
    <!-- Controllers -->
    <depend>controller_manager</depend>
    <depend>joint_state_controller</depend>
    <depend>effort_controllers</depend>
    <depend>joint_trajectory_controller</depend>
    <depend>robot_state_publisher</depend>
    
    <!-- Interfaces -->
    <depend>controller_interface</depend>
    <depend>hardware_interface</depend>
    <depend>pluginlib</depend>
    
    <!-- Gazebo -->
    <depend>gazebo_ros</depend>
    
    <!-- Unitree Specific-->
    <depend>unitree_legged_msgs</depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
        <!-- <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/> -->
    </export>
</package>
